--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brotli",
+  "name": "@heritage-type/brotli",
   "version": "1.3.2",
   "description": "A port of the Brotli compression algorithm as used in WOFF2",
   "main": "index.js",
